reworked maven compilation