@@ -7,10 +7,23 @@
     <groupId>groupId</groupId>
     <artifactId>gwtTest</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <url>http://example.com</url> <!--what this tag does? -->
+    <packaging>war</packaging> <!-- output is ear file; pom for packaging multiple  -->
 
+    <properties>
+        <gwtVersion>2.7.0</gwtVersion>
+        <webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <tomcat.webport>8090</tomcat.webport>
+        <tomcat.ajpport>8009</tomcat.ajpport>
+        <tomcat.context>/parent</tomcat.context>
+    </properties>
 
 
     <build>
+
+        <defaultGoal>clean install tomcat7:run-war-only</defaultGoal>
+
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -19,15 +32,51 @@
                     <source>1.8</source>
                     <target>1.8</target>
                 </configuration>
+                <version>3.1</version>
             </plugin>
+
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-ear-plugin</artifactId>
                 <version>2.10.1</version>
+
                 <configuration>
                     <!-- configuration elements goes here -->
-                   <!-- <bundeDir>C:\Program Files\Java\glassfish4\glassfish\domains\domain2\autodeploy</bundeDir> -->
+                    <outputDirectory>C:\Program Files\Java\glassfish4\glassfish\domains\domain2\autodeploy</outputDirectory>
+
                 </configuration>
             </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>2.3</version>
+                <configuration>
+                  <!--  <webXml>src\main\webapp\WEB-INF\web.xml</webXml> -->
+                    <failOnMissingWebXml>false</failOnMissingWebXml>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>gwt-maven-plugin</artifactId>
+                <version>${gwtVersion}</version>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>2.0</version>
+                <configuration>
+                    <path>${tomcat.context}</path>
+                    <port>${tomcat.webport}</port>
+                    <ajpPort>${tomcat.ajpport}</ajpPort>
+                    <systemProperties>
+                        <JAVA_OPTS>-XX:MaxPermSize=256m</JAVA_OPTS>
+                    </systemProperties>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
 
@@ -35,7 +84,13 @@
         <dependency>
             <groupId>com.google.gwt</groupId>
             <artifactId>gwt-user</artifactId>
-            <version>2.7.0</version>
+            <version>${gwtVersion}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.gwt</groupId>
+            <artifactId>gwt-servlet</artifactId>
+            <version>${gwtVersion}</version>
+            <scope>provided</scope>  <!-- ??? -->
         </dependency>
     </dependencies>
 
